[package]
name = "tek_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.1", features = ['macros'] }
tokio-util = "0.6.9"
[dependencies.serenity]
default-features = false
features = ['time', 'client', 'gateway', 'model', 'rustls_backend']
version = "0.11"
